# xymalloc

./: CMakeLists.txt  README.md  pagesize.cc  test_hugepage.cc
.github/workflows/: main.yml
include/: init.h  os.h  page.h  segment.h  xy_heap.h  xy_list.h  xy_macro.h  xy_malloc.h  xy_malloc_structs.h  xy_os.h  xy_page.h  xy_pool_malloc.h  xy_segment.h  xy_stack_malloc.h  xy_structs.h  xymalloc.h  xymalloc_attribute.h  xymalloc_internal.h  xymalloc_macro.h  xymalloc_structs.h
src/: alloc.c  alloc.cc  init.cc  os.cc  page.cc  xy_malloc.cc  xy_os.cc
test/: huge_page.cc  numa_page_migrate.cc  realloc_test.cc  stack_alloc_test.cc
